# telegram-transcriber

./: Cargo.toml  README.md  requirements.txt
src/: logger.rs  main.rs  transcribe.rs
